--- a/src/main.tex
+++ b/src/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \makeatletter
 \def\insp#1{\texttt{\string#1:\meaning#1}}
-\def\inspw#1{\@latex@warning{\texttt{\string#1:\meaning#1}}}
+\def\inspw#1{\@latex@warning{\string#1:\meaning#1}}
 \@latex@warning{COMPILING EXBANK MAIN}
 \@latex@warning{COMPILING EXBANK MAIN}
 \@latex@warning{COMPILING EXBANK MAIN}
