--- a/exercises/firstexercise.tex
+++ b/exercises/firstexercise.tex
@@ -1,6 +1,7 @@
 %!TEX root = ../example.tex
-Info about the exercise\\
-
+\begin{intro}
+Info about the exercise...
+\end{intro}
 \begin{problem}
 Getting constant build errors?
 \end{problem}
