--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -1,4 +1,7 @@
 %!TEX root = ../example.tex
+\begin{intro}
+  In this exercise, we'll be looking at \( \dots \)
+\end{intro}
 \begin{problem}
   2nd TEST1
 \end{problem}
