--- a/src/main.tex
+++ b/src/main.tex
@@ -11,7 +11,7 @@
 \input{preamble}
 
 % \makeset{2}{secondexercise, firstexercise}
-\makeset{2}{\exclude{secondexercise}{2,3}, firstexercise, \select{thirdexercise}{2,3}}
+\makeset[intro]{2}{\exclude{secondexercise}{1,2,3}, firstexercise, \select{thirdexercise}{2,3}}
 \begin{document}
 
 \buildset{2}
