--- a/exercises/thirdexercise.tex
+++ b/exercises/thirdexercise.tex
@@ -1,4 +1,7 @@
 %!TEX root = ../example.tex
+\begin{intro}
+Problem intro for thirdexercise  
+\end{intro}
 \begin{problem}
   3rd TEST1
 \end{problem}
