--- a/exercises/firstexercise.tex
+++ b/exercises/firstexercise.tex
@@ -9,3 +9,6 @@ Getting constant build errors?
 \begin{solution}
 REMEMBER that \texttt{\string\end\{solution\}} can't have spaces in front of it and needs it's own line!
 \end{solution}
+\begin{problem}
+second of first
+\end{problem}
