--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -47,12 +47,23 @@
   % \inspw\DisplayProblem
   \stepcounter{metacounter}
 }
+\pgfkeys{
+ /makeset/.is family, /makeset,
+ default/.style = {noheadarg=\isFalse, introarg=\isFalse},
+ intro/.style = {introarg=\isTrue},
+ nohead/.style = {noheadarg=\isTrue},
+ introarg/.estore in = \introarg,
+ noheadarg/.estore in = \noheadarg
+}
 %% Generates sets that can be iterated over
 \newcommand\makeset[3][]{
-  \edef\oarg{#1}
-  \edef\introarg{intro}
-  \ifx\oarg\introarg
+  \pgfkeys{/makeset, default, #1}%
+  % Is intro sent?
+  \if\introarg\isTrue%
     \ea\gdef\csname setlist@#2@intro\endcsname{\isTrue}
+  \fi
+  \if\noheadarg\isTrue%
+    \ea\gdef\csname setlist@#2@nohead\endcsname{\isTrue}
   \fi
   \ea\gdef\csname setlist@#2\endcsname{#3}
 }
@@ -74,10 +85,12 @@
 }
 %%Logic for building a set
 \gdef\@countIntros{\isFalse}
+\gdef\phead{?\noexpand\Trigger\noexpand\VeryBeginProblem}
 \newcommand\buildset[2][]{
   \def\oarg{#1}
   % \def\argToShowIntro{intro}
   \@ifundefined{setlist@#2@intro}{\gdef\@countIntros{\isFalse}}{\gdef\@countIntros{\isTrue}\@latex@warning{Counting intros}}
+  \@ifundefined{setlist@#2@nohead}{\gdef\nohead{\isFalse}}{\gdef\nohead{\isTrue}}
   %% Setting the global setName
   \xdef\setName{#2}
   %% Warnins if the set doesn't exist
@@ -91,6 +104,8 @@
   \Trigger\StartBuildset
   %% Loop through list
   \foreach \exerciseFileInfo in \setlist{
+    \def\continueLoop{\isTrue}
+    \inspw\exerciseFileInfo
     %% ppList is -1 if it's not a list
     \gdef\ppList{-1}
     %% Counter used for iterating over partproblems
@@ -102,9 +117,16 @@
     \StrLeft{\exerciseFileInfo}{1}[\firstchar]%
     \if[\firstchar
       \ea\redef\exerciseFileInfo\relax
+      \def\continueLoop{\isTrue}
+    \else\if?\firstchar
+        \expandafter\@secondoftwo\exerciseFileInfo
+      \def\continueLoop{\isFalse}
     \else
-      \redef{\exerciseFileInfo}{normal}
-    \fi
+        \redef{\exerciseFileInfo}{normal}
+        \def\continueLoop{\isTrue}
+    \fi\fi
+    \if\continueLoop\isTrue
+
     %% TRIGGER EVERTYHING
     \Trigger\InputExercise
     \Trigger\BeginProblem
@@ -112,13 +134,15 @@
     %% The one below \VeryBeginProblem is only for stuff that
     %% is intended to be a part of the problem
     %% e.g. problem header is using this.
-    \Trigger\VeryBeginProblem
+    \if\nohead\isFalse\Trigger\VeryBeginProblem\fi
+    \inspw\nohead
     %% \incl = \input because otherwise latexpanded would try.
     %% to input the file
     \incl{\exercisesDir/\exerciseFile}
     %% More triggers
     \Trigger\EndProblem
     \Trigger\EndInputExercise
+    \fi
   }
   \Trigger\EndBuildset
 }
