--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -47,6 +47,8 @@
   % \inspw\DisplayProblem
   \stepcounter{metacounter}
 }
+
+%% Makeset arg handler
 \pgfkeys{
  /makeset/.is family, /makeset,
  default/.style = {noheadarg=\isFalse, introarg=\isFalse},
@@ -55,7 +57,19 @@
  introarg/.estore in = \introarg,
  noheadarg/.estore in = \noheadarg
 }
+
 %% Generates sets that can be iterated over
+%% \makeset[intro|nohead]{\select{path/to/file}{1,2}, \exclude{file}{1,2}, file}
+%% Where file is a file in the \exerciseDir-folder and 1,2 are the part problem numbers
+%\BDOC!
+%\makeset[intro,nohead]{filable}
+% This command is the one you use to make a set! Later you use \buildset to build the sets you make. The \meta{filable} argument is either the name of the file relative to the \exerciseDir-path (default its in the root called exercises), or you could use the \select or \exclude to  respectively cherry pick or exclude exercises. (See their docs).\\
+% \oarg{intro} this counts the intro environment as a part problem, so that you can \select or \exclude the intro\\
+% \oarg{nohead} prevents the builder from adding a problem header. This is handy if you want to create an exercise that is composed of multiple parts. You can use the \phead to insert the problem header where you want it
+%\EDOC
+%\BEX!
+% \makeset[nohead]\{\phead, \select{myexercise}\{1,2,3\}\}
+%\EEX
 \newcommand\makeset[3][]{
   \pgfkeys{/makeset, default, #1}%
   % Is intro sent?
@@ -128,20 +142,21 @@
     \if\continueLoop\isTrue
 
     %% TRIGGER EVERTYHING
+%\Trigger\InputExercise:Triggers before a file is included
+%\Trigger\BeginProblem:Triggers before a file is included, but only if problem headers are to be written (no [nohead] given)
     \Trigger\InputExercise
-    \Trigger\BeginProblem
-    %% The two above are meant to be aliases
-    %% The one below \VeryBeginProblem is only for stuff that
+    \if\nohead\isFalse\Trigger\BeginProblem\fi
+    %% \VeryBeginProblem is only for stuff that
     %% is intended to be a part of the problem
     %% e.g. problem header is using this.
     \if\nohead\isFalse\Trigger\VeryBeginProblem\fi
     \inspw\nohead
-    %% \incl = \input because otherwise latexpanded would try.
+    %% \incl = \ input because otherwise latexpanded would try.
     %% to input the file
     \incl{\exercisesDir/\exerciseFile}
     %% More triggers
-    \Trigger\EndProblem
-    \Trigger\EndInputExercise
+%\Trigger\EndProblem:Triggers right after problem is included if [nohead] \emph{not} given
+    \if\nohead\isFalse\Trigger\EndProblem\fi
     \fi
   }
   \Trigger\EndBuildset
