--- a/docs/templates/exampletemplate.tex
+++ b/docs/templates/exampletemplate.tex
@@ -1,3 +1,5 @@
-\begin{tcolorbox}[docexample]
+% \begin{tcolorbox}[docexample]
+\begin{dispListing}
 §content
-\end{tcolorbox}
+\end{dispListing}
+% \end{tcolorbox}
