--- a/src/main.tex
+++ b/src/main.tex
@@ -11,8 +11,9 @@
 \input{preamble}
 
 % \makeset{2}{secondexercise, firstexercise}
-\makeset[intro]{2}{\exclude{secondexercise}{1,2,3}, firstexercise, \select{thirdexercise}{2,3}}
+% \makeset[intro]{2}{\exclude{secondexercise}{2,3}, firstexercise, \select{thirdexercise}{1,2}}
+\makeset[intro,nohead]{2}{\phead,\select{thirdexercise}{1,2,3},\exclude{secondexercise}{2,3},\phead,\select{firstexercise}{1}}
+% \makeset[intro]{2}{\exclude{secondexercise}{1}}
 \begin{document}
-
 \buildset{2}
 \end{document}
