--- a/src/isin.tex
+++ b/src/isin.tex
@@ -1,4 +1,11 @@
-% \isin:
+%\BDOC
+%§ref
+%\isin{haystack}{needle}{True}{False}
+% \meta{haystack} is a comma separated list of integers\\
+% \meta{needle} is an integer\\
+% Executes \meta{True} if \meta{needle} is found in \meta{haystack}
+% else executes \meta{False}
+%\EDOC
 % #1: haystack
 % #2: needle
 % #3: action if found in list
