--- a/src/smush.tex
+++ b/src/smush.tex
@@ -1,1 +1,9 @@
+%\BDOC
+% §env=Environments
+% §lang=Internationalization
+% §triggers=Triggers
+% §ref=General reference
+% §makingSets=Making sets
+% §count=Counters
+%\EDOC
 \input{preamble}
