--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -8,162 +8,126 @@
 \tcbset{documentation listing style=mydocumentation}
 
 \setlength{\parindent}{0pt}
-\title{Exercise bank - documentation}
+\title{Exercise bank - manual}
 \author{Andreas Strauman}
 \begin{document}
-% \maketitle
-\section{Motivation}
-So I wanted a package that allowed me to mix-and-match exercises. I couldn't find it, so I made it.
-\section{Flow/Moderate start}
-I suspect that working with this package will break you current flow. So let's go throught it.
-
-This package assumes you put all of your exercises within the folder named \texttt{exercises}
-\begin{dispListing*}{title=exercises/myexercise.tex}
-\begin{intro}
-  This introduces our problem
-\end{intro}
-\begin{problem}
-  This is a partproblem 1,
-  and will be hidden (just wait, you'll see)
-\end{problem}
-\begin{problem}
-  This is a partproblem 2.
-  This will not be hidden, but become part problem a!
-\end{problem}
-\end{dispListing*}
-Let's build all of them first. In the main file, (the one where you include this package):
-\begin{dispListing*}{title=main.tex}
-  \documentclass{article}
-  \usepackage{exbank}
-  \makeset{myExerciseSet}{myexercise}
-  \begin{document}
-    \buildset{myExerciseSet}
-  \end{document}
-\end{dispListing*}
-This builds the entire set, and adds Problem header and partproblem counters ( (1a) and (1b) ) by default.
+\maketitle
+\tableofcontents
 \clearpage
-\subsection{Select}
-Now, let's build only the second problem.
-\begin{dispListing*}{title=main.tex}
-  \documentclass{article}
-  \usepackage{exbank}
-  \makeset{myExerciseSet}{\select{myexercise}{2}}
-  \begin{document}
-    \buildset{myExerciseSet}
-  \end{document}
-\end{dispListing*}
-This should only build the intro and the one exercise you \refCom*{select}ed!
-
-Now, say you want to hide the intro. Well all you have to do in this case is
-make the package treat the intro as a problem in regards to what is \refCom*{select}ed.
-Just add the optional argument \oarg{intro} to \dac{make}. That is switch
-\begin{dispListing}
-\makeset{myExerciseSet}{\select{myexercise}{2}}
-\end{dispListing}
-with
-\begin{dispListing}
-\makeset[intro]{myExerciseSet}{\select{myexercise}{3}}
-\end{dispListing}
-Notice that there are 3 `partproblems' now since we have to count the intro!
-
-\subsection{Exclude}
-But what if you have an exercise with 12 partproblems, and you only want to exclude the 7th partproblem? Well, then \dac{Exclude} is here to rescue the day for you.
-\begin{dispListing}
-  \makeset{myExerciseSet}{\exclude{soManyExercises}{7}}
-\end{dispListing}
-Here it's important to note that the [intro] argument would not make the intros disappear. If we wanted to only exclude the intro from our previous example file \texttt{exercises/myexercise.tex} we would do
-\begin{dispListing}
-\makeset[intro]{myExerciseSet}{\exclude{myexercise}{1}}
-\end{dispListing}
-So we're excluding the partproblem 1. But that's the intro when we send the [intro] optional argument
-\clearpage
-\subsection{Multiple}
-In \dac{makeset} you can just separate exercises with commas! Here is an example:
-
-Let's say you have two files with exercises. One located in \texttt{exercises/circuits/RLC.tex} and one in \texttt{exercises/ohm/ohmsGeneralLaw.tex}, and you want to include partproblem 1 through 5 from \texttt{RLC.tex} and all of the exercises from \texttt{ohmsGeneralLaw.tex}.
-
-\begin{dispListing}
-\makeset{\select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
-\end{dispListing}
-This will divide it up with problem headers. So that what is in the \texttt{RLC.tex}-file will be Problem 1, and \texttt{ohmsGeneralLaw.tex} Problem 2.
-\subsection{Mixnmatch}
-What if you want to make both of them the same exercise? Well, then you pass the [nohead] argument to \dac{makeset}:
-\begin{dispListing}
-\makeset[nohead]{\phead, \select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
-\end{dispListing}
-The \dac{phead} command makes a problem header. You can pass them as much as you want:
-
-\begin{dispListing}
-\makeset[nohead]{\phead, \select{circuits/RLC}{1,...,5},
-              ohmsGeneralLaw, \phead, someOtherExercise, moreExercises}
-\end{dispListing}
-
-\subsection{Solutions}
-The last thing to cover then is solutions. In your exercise files you just use the solution environment
-\begin{dispListing}
-\begin{solution}
-Solution goes here
-\end{solution}
-\end{dispListing}
-They are hidden by default, so you would have to use \dac{DisplaySolutions} in
-your main file to display them.
-
-That covers the basics. Enjoy
-\begin{marker}
-\dac{begin}\{problem\},\dac{end}\{problem\},\\
-\dac{begin}\{solution\},\dac{end}\{solution\},\\
-\dac{begin}\{intro\} and \dac{end}\{intro\} has to be on their own line without any spaces!
-\end{marker}
-\clearpage
+\input{templates/intro}
 \section{Reference}
-
-\begin{docEnvironment}[]{problem}{}
- Inside the exercises folder, you keep your exercises. Inside there you'd use a problem environment to write your partproblems. It might be a little confusing that you're using \dac{begin}\{problem\} instead of \dac{begin}\{partproblem\} when you're writing a partproblem, but it's less typing.
-
-\end{docEnvironment}
-\begin{docEnvironment}[]{solution}{}
- Things inside here is only visible if \refCom{DisplaySolutions} are given before \dac{begin}\{document\}
-
-\end{docEnvironment}
-\begin{docCommand}[]{DisplaySolutions}{}
- Turns on the solutions, so they are shown.
-
-\end{docCommand}
-\begin{docEnvironment}[]{intro}{}
- Sometimes you'd want to introcude your exercises and tell a little bit about it. Maybe have a figure there also. Those things should go inside this environment. This can be treated as a problem in terms of counting. See \refCom{makeset} for more info.
-
-\end{docEnvironment}
+\subsection{Making sets}
 \begin{docCommand}[]{makeset}{\oarg{intro,nohead}\marg{filable}}
  This command is the one you use to make a set! Later you use \dac{buildset} to build the sets you make. The \meta{filable} argument is either the name of the file relative to the \dac{exerciseDir}-path (default its in the root called exercises), or you could use the \dac{select} or \dac{exclude} to  respectively cherry pick or exclude exercises. (See their docs).\\
  \oarg{intro} this counts the intro environment as a part problem, so that you can \dac{select} or \dac{exclude} the intro\\
  \oarg{nohead} prevents the builder from adding a problem header. This is handy if you want to create an exercise that is composed of multiple parts. You can use the \dac{phead} to insert the problem header where you want it
 
 \end{docCommand}
-% \begin{tcolorbox}[docexample]
+
 \begin{dispListing}
  \makeset[nohead]\{\phead, \select{myexercise}\{1,2,3\}\}
 
 
 \end{dispListing}
-% \end{tcolorbox}
+
 \begin{docCommand}[]{exclude}{\marg{exerciseFileName}\marg{Comma separated numbers}}
 As you can see in the intro section of the documentation, this is for excluding partproblems
 To be used in \refCom{makeset}
 
 \end{docCommand}
+
 \begin{docCommand}[]{select}{\marg{exerciseFileName}\marg{Comma separated numbers}}
 As you can see in the intro section of the documentation, this is for cherry picking partproblems
 To be used in \refCom{makeset}
 
 \end{docCommand}
 
+
+
+
+
+\begin{docCommand}[]{pplabel}{\marg{label}}
+ Labels a partproblem. You can reference to it later using \dac{ppref}\{\meta{label\}}
+
+\end{docCommand}
+
+\begin{docCommand}[]{ppref}{\marg{label}}
+ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1c)
+
+\end{docCommand}
+
+\begin{docCommand}[]{ppref}{\marg{label}}
+ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1
+
+\end{docCommand}
+
+\subsection{Environments}
+\begin{docEnvironment}[]{problem}{}
+ Inside the exercises folder, you keep your exercises. Inside there you'd use a problem environment to write your partproblems. It might be a little confusing that you're using \dac{begin}\{problem\} instead of \dac{begin}\{partproblem\} when you're writing a partproblem, but it's less typing.
+\begin{marker}\dac{end}\{problem\} has to be on it's own line without any leading spaces!\end{marker}
+
+\end{docEnvironment}
+
+\begin{docEnvironment}[]{solution}{}
+ Things inside here is only visible if \refCom{DisplaySolutions} are given before \dac{begin}\{document\}
+\begin{marker}\dac{end}\{solution\} has to be on it's own line without any leading spaces!\end{marker}
+
+\end{docEnvironment}
+
+\begin{docCommand}[]{DisplaySolutions}{}
+ Turns on the solutions, so they are shown.
+
+\end{docCommand}
+
+\begin{docEnvironment}[]{intro}{}
+ Sometimes you'd want to introcude your exercises and tell a little bit about it. Maybe have a figure there also. Those things should go inside this environment. This can be treated as a problem in terms of counting. See \refCom{makeset} for more info.
+\begin{marker}\dac{end}\{intro\} has to be on it's own line without any leading spaces!\end{marker}
+
+\end{docEnvironment}
+
+\subsection{Internationalization}
+\begin{docCommand}[]{translateExBank}{\marg{Translation key/vals}}
+ This is to translate the text inside the package. As of now the available key/values are
+\begin{itemize}
+\item Problem
+\item Solution
+\end{itemize}
+
+\end{docCommand}
+
+ The Norwegian translation would then be done with
+
+
+\begin{dispListing}
+ \translateExBank{Problem=Oppgave, Solution=Løsning}
+
+
+\end{dispListing}
+
+\subsection{Triggers}
+\begin{docCommand}[]{Trigger}{\marg{Any Macro}}
+ See \refCom{At}\\
+Triggers available:\\
+
+\end{docCommand}
+
+\subsection{General reference}
+\begin{docCommand}[]{ownLineNoSpacesGotIt}{}
+ This is to annoy the user enough to get his attention about the requirements of the \refEnv{problem}, \refEnv{solution} and \refEnv{intro} environments.\\
+ Compilation wont work unless \dac{end}\{problem\}, \dac{end}\{solution\} and \dac{end}\{intro\} are on their own lines and without any spaces. This warning can be removed by doing \dac{def}\dac{ownLineNoSpacesGotIt}{} before \dac{usepackage}\{exbank\}.
+
+\end{docCommand}
+
+
+
  This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
+
 
 \begin{docCommand}[]{At}{\marg{AnyMacro}}
 Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
 
 \end{docCommand}
-% \begin{tcolorbox}[docexample]
+
 \begin{dispListing}
 \At\BeginSomething{DoSomething}
 
@@ -173,15 +137,13 @@ Here you can send any macro because it isn't evaluated! For example \dac{At}\dac
 
 
 \end{dispListing}
-% \end{tcolorbox}
-\begin{docCommand}[]{Trigger}{\marg{Any Macro}}
- See \refCom{At}
-Triggers available:\\
-\dac{At}\dac{InputExercise}\\ Triggers before a file is included\\
-\dac{At}\dac{BeginProblem}\\ Triggers before a file is included, but only if problem headers are to be written (no [nohead] given)\\
-\dac{At}\dac{EndProblem}\\ Triggers right after problem is included if [nohead] \emph{not} given\\
+
+\subsection{Counters}
 
 
-\end{docCommand}
+\docCounter{problemcounter}-counter holds the current problem number and
+\docCounter{partproblemcounter}-counter holds the current partproblem \emph{number}.
+
+
 
 \end{document}
