--- a/src/i18n.tex
+++ b/src/i18n.tex
@@ -6,7 +6,21 @@
   Problem/.estore in = \@tr@Problem,
   Solution/.estore in = \@tr@Solution
 }
-% %%Inside some command
+% \BDOC
+%§lang
+%\translateExBank{Translation key/vals}
+% This is to translate the text inside the package. As of now the available key/values are
+%\!begin{itemize}
+%\!item Problem
+%\!item Solution
+%\!end{itemize}
+% \EDOC
+%\BDOC
+% The Norwegian translation would then be done with
+%\EDOC
+% \BEX
+% \translateExBank{Problem=Oppgave, Solution=Løsning}
+% \EEX
 \newcommand{\translateExBank}[1]{
   \pgfkeys{/exbanki18n, default, #1}%
 }
