--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -1,7 +1,12 @@
 %!TEX root = main.tex
+%\BDOC
+%§ref
+%\ownLineNoSpacesGotIt
+% This is to annoy the user enough to get his attention about the requirements of the \!refEnv{problem}, \!refEnv{solution} and \!refEnv{intro} environments.\\
+% Compilation wont work unless \end{problem}, \end{solution} and \end{intro} are on their own lines and without any spaces. This warning can be removed by doing \def\ownLineNoSpacesGotIt{} before \usepackage{exbank}.
+%\EDOC
 \makeatletter
 \@ifundefined{ownLineNoSpacesGotIt}{
-% \edef\warn{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \string\usepackage{exbank}}
 \@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \string\usepackage{exbank}}
 }{}
 \@ifundefined{exercisesDir}{
