Styled the exbank better

--- a/src/packagehead.tex
+++ b/src/packagehead.tex
@@ -1,1 +1,2 @@
-\ProvidesPackage{exbank}[2018/03/25 v0.01 Creates a setup that gives freedom in making sets and exercises.]
+% Source (with comments) can be found at https://github.com/Strauman/exerciseBank
+\ProvidesPackage{exbank}[2018/03/30 v0.01 Creates a setup that gives freedom in making sets and exercises.]
